--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ header h1{
 .flex{
     display: flex;
     justify-content: center;
+    text-align: center;
 }
 .skill li{
     background-color: rgb(222, 221, 231);
@@ -141,14 +142,17 @@ section{
   text-align: center;
 }
 .work_main h2{
-  margin: 15px 0;
+  margin: 30px 0 15px 0;
 }
 
 .work_main ul{
     text-align: center;
 }
+.work_main li {
+  position: relative;
+}
 .work_main img{
-    width: 70%;
+    width: 800px;
     border: solid 1px #000000;
     padding: 10px;
     border-radius: 10px;
@@ -156,6 +160,222 @@ section{
 .work_main h3{
   margin: 5px 0;
 }
+/*モーダル本体の指定 + モーダル外側の背景の指定*/
+.modal-open{
+  right: 110px;
+  bottom: 20px;
+  width: 40px;
+}
+.modal-open2{
+  right: 110px;
+  bottom: 20px;
+  width: 40px;
+}
+.modal-open3{
+  right: 110px;
+  bottom: 20px;
+  width: 40px;
+}
+.modal-open4{
+  right: 110px;
+  bottom: 20px;
+  width: 40px;
+}
+.modal-open5{
+  right: 110px;
+  bottom: 20px;
+  width: 40px;
+}
+
+
+.modal-open img {
+  border: none;
+}
+.modal-open2 img {
+  border: none;
+}
+.modal-open3 img {
+  border: none;
+}
+.modal-open4 img {
+  border: none;
+}
+.modal-open5 img {
+  border: none;
+}
+
+.modal-container{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: rgba(0,0,0,50%);
+  z-index: 1;
+	padding: 40px 20px;
+	overflow: auto;
+	opacity: 0;
+	visibility: hidden;
+	transition: .3s;
+    box-sizing: border-box;
+}
+/*モーダル本体の擬似要素の指定*/
+.modal-container:before{
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	height: 100%;
+}
+/*モーダル本体に「active」クラス付与した時のスタイル*/
+.modal-container.active{
+	opacity: 1;
+	visibility: visible;
+}
+/*モーダル枠の指定*/
+.modal-body{
+	display: inline-block;
+	vertical-align: middle;
+	max-width: 500px;
+	width: 90%;
+}
+/*モーダルを閉じるボタンの指定*/
+.modal-close{
+	position: absolute;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	top: -40px;
+	right: -40px;
+	width: 40px;
+	height: 40px;
+	font-size: 40px;
+	color: #fff;
+	cursor: pointer;
+}
+/*モーダル内のコンテンツの指定*/
+.modal-content{
+	background: #fff;
+	text-align: left;
+	padding: 30px;
+}
+.modal-container2{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: rgba(0,0,0,50%);
+  z-index: 1;
+	padding: 40px 20px;
+	overflow: auto;
+	opacity: 0;
+	visibility: hidden;
+	transition: .3s;
+    box-sizing: border-box;
+}
+/*モーダル本体の擬似要素の指定*/
+.modal-container2:before{
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	height: 100%;
+}
+/*モーダル本体に「active」クラス付与した時のスタイル*/
+.modal-container2.active{
+	opacity: 1;
+	visibility: visible;
+}
+.modal-container3{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: rgba(0,0,0,50%);
+  z-index: 1;
+	padding: 40px 20px;
+	overflow: auto;
+	opacity: 0;
+	visibility: hidden;
+	transition: .3s;
+    box-sizing: border-box;
+}
+/*モーダル本体の擬似要素の指定*/
+.modal-container3:before{
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	height: 100%;
+}
+/*モーダル本体に「active」クラス付与した時のスタイル*/
+.modal-container3.active{
+	opacity: 1;
+	visibility: visible;
+}
+.modal-container4{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: rgba(0,0,0,50%);
+  z-index: 1;
+	padding: 40px 20px;
+	overflow: auto;
+	opacity: 0;
+	visibility: hidden;
+	transition: .3s;
+    box-sizing: border-box;
+}
+/*モーダル本体の擬似要素の指定*/
+.modal-container4:before{
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	height: 100%;
+}
+/*モーダル本体に「active」クラス付与した時のスタイル*/
+.modal-container4.active{
+	opacity: 1;
+	visibility: visible;
+}
+.modal-container5{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: rgba(0,0,0,50%);
+  z-index: 1;
+	padding: 40px 20px;
+	overflow: auto;
+	opacity: 0;
+	visibility: hidden;
+	transition: .3s;
+    box-sizing: border-box;
+}
+/*モーダル本体の擬似要素の指定*/
+.modal-container5:before{
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	height: 100%;
+}
+/*モーダル本体に「active」クラス付与した時のスタイル*/
+.modal-container5.active{
+	opacity: 1;
+	visibility: visible;
+}
+.icon {
+  border: none;
+  width: 40px !important;
+}
+
 
 .loading {
     /*ローディング画面の縦横幅を画面いっぱいになるように指定*/
@@ -207,6 +427,34 @@ section{
       flex-direction: column;
       align-items: center;
     }
+    .work_main img{
+    width: 70%;
+    border: solid 1px #000000;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
+  .icon {
+    border: none;
+  }
+
+  .modal-open img {
+  border: none;
+  }
+  .modal-open2 img {
+    border: none;
+  }
+  .modal-open3 img {
+    border: none;
+  }
+  .modal-open4 img {
+    border: none;
+  }
+  .modal-open5 img {
+    border: none;
+  }
+
+
 }
   
 @media screen and (max-width: 1200px) {
@@ -219,5 +467,25 @@ section{
       flex-direction: column;
       align-items: center;
   }
+  .icon {
+    border: none;
+  }
+
+  .modal-open img {
+    border: none;
+  }
+    .modal-open2 img {
+    border: none;
+  }
+  .modal-open3 img {
+    border: none;
+  }
+  .modal-open4 img {
+    border: none;
+  }
+  .modal-open5 img {
+    border: none;
+  }
+
 
 }
